--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitforge Software Solutions</title>
+    <title>Contact - Bitforge Software Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -39,9 +39,9 @@
                     <h1 class="text-2xl font-bold text-indigo-600">Bitforge</h1>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <a href="index.html" class="text-indigo-600 font-semibold px-3 py-2 rounded-md text-sm font-medium">Home</a>
+                    <a href="index.html" class="text-gray-600 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">Home</a>
                     <a href="products.html" class="text-gray-600 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">Products</a>
-                    <a href="contact.html" class="text-gray-600 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">Contact</a>
+                    <a href="contact.html" class="text-indigo-600 font-semibold px-3 py-2 rounded-md text-sm font-medium">Contact</a>
                     <a href="privacy.html" class="text-gray-600 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">Privacy Policy</a>
                     <a href="terms.html" class="text-gray-600 hover:text-indigo-600 px-3 py-2 rounded-md text-sm font-medium">Terms of Service</a>
                 </div>
@@ -51,43 +51,29 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Hero Section -->
-        <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-                <h2 class="text-4xl sm:text-5xl font-bold mb-4">Welcome to Bitforge Software Solutions</h2>
-                <p class="text-lg sm:text-xl mb-6">Your Trusted Partner in Software Innovation</p>
-                <a href="contact.html" class="inline-block bg-white text-indigo-600 font-semibold py-3 px-6 rounded-lg hover:bg-indigo-100 hover-scale">Get Started</a>
-            </div>
-        </section>
-
-        <!-- Services Section -->
-        <section id="services" class="py-20 bg-white">
+        <!-- Contact Section -->
+        <section id="contact" class="py-20 bg-white pt-32">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <h2 class="text-3xl font-bold text-center mb-12">Our Services</h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                        <h3 class="text-xl font-semibold mb-4">API Integrations</h3>
-                        <p class="text-gray-600">Seamlessly connect your systems with robust and scalable API solutions tailored to your business needs.</p>
-                    </div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                        <h3 class="text-xl font-semibold mb-4">Customizable Plugins</h3>
-                        <p class="text-gray-600">Enhance your software with bespoke plugins designed to improve functionality and user experience.</p>
-                    </div>
-                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                        <h3 class="text-xl font-semibold mb-4">Addon Management Tools</h3>
-                        <p class="text-gray-600">Streamline your operations with efficient tools for managing and optimizing software addons.</p>
+                <h2 class="text-3xl font-bold text-center mb-12">Contact Us</h2>
+                <div class="max-w-lg mx-auto">
+                    <div class="space-y-6">
+                        <div>
+                            <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+                            <input type="text" id="name" class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" placeholder="Your Name">
+                        </div>
+                        <div>
+                            <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                            <input type="email" id="email" class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" placeholder="Your Email">
+                        </div>
+                        <div>
+                            <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
+                            <textarea id="message" rows="4" class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" placeholder="Your Message"></textarea>
+                        </div>
+                        <div>
+                            <button type="button" class="w-full bg-indigo-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-indigo-700 hover-scale">Send Message</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- About Section -->
-        <section id="about" class="py-20 bg-gray-50">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <h2 class="text-3xl font-bold text-center mb-12">About Bitforge</h2>
-                <p class="text-lg text-gray-600 text-center max-w-3xl mx-auto">
-                    At Bitforge, we specialize in delivering cutting-edge software solutions to empower businesses. Our mission is to drive success through innovative technology, providing robust API integrations, customizable plugins, and efficient addon management tools. With a focus on quality and performance, we are your trusted partner in software innovation.
-                </p>
             </div>
         </section>
     </main>
@@ -112,6 +98,11 @@
                     behavior: 'smooth'
                 });
             });
+        });
+
+        // Placeholder for contact form submission (no backend)
+        document.querySelector('button[type="button"]').addEventListener('click', () => {
+            alert('Thank you for your message! We will get back to you soon.');
         });
     </script>
 </body>
